--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,6 +8,11 @@ body {
     background-color: rgba(255, 94, 0, 0.01);
 }
 
+header.site-header {
+    margin-top: 20px;
+    border: none;
+}
+
 .site-title {
     font-size: 400%;
 }
